Fixed bug and improved tests